# ScreenStreamX

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: capture.rs  gui.rs  lib.rs  main.rs  network.rs
src/ai/: transcription.rs
src/app/: capture.rs  gui.rs  hotkey_module.rs  mod.rs  network.rs
src/app/gui/: app_main.rs  caster_ui.rs  components.rs  mod.rs  receiver_ui.rs  visuals.rs
src/app/state/: app_flags.rs  capture_state.rs  mod.rs  network_state.rs  ui_state.rs  user_settings.rs
src/utils/: annotations.rs  editor.rs  hotkeys.rs  mod.rs  multi_monitor.rs
