[package]
name = "screen_stream_x"
version = "0.1.0"
authors = ["Stefano Roy Bisignano <stefano2001roy@gmail.com>"]
edition = "2021"
# Dipendenze del progetto
[dependencies]
tokio = {version="1.37", features = ["full"]}
hyper = { version = "0.14", features = ["full"] }
scrap = "0.5"
image = "0.23"
winit = "0.26"
druid = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"