[package]
name = "screen_stream_x"
version = "0.1.0"
authors = ["Stefano Roy Bisignano <stefano2001roy@gmail.com>"]
edition = "2021"
# Dipendenze del progetto
[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
winit = "0.30.5"
local-ip-address = "0.6.1"
scrap = "0.5.0"
image = "0.25.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
minifb = "0.20"
global-hotkey = "0.2"
